# jade

./: .gitignore  Cargo.toml  README.md  bot.py
src/: commands.rs  main.rs
src/commands/: misc.rs  moderation.rs
src/commands/moderation/: channel.rs  purge.rs  role.rs  user.rs
