[package]
name = "jade"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.38.0"
tracing = "0.1.37"
tokio = "1.26.0"
once_cell = "1.19.0"
humantime = "2.1.0"
regex = "1.10.3"
